<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_poste_insertar"
        android:title="@string/action_insertar"
        android:orderInCategory="100"
    />
    <item android:id="@+id/action_poste_editar"
        android:title="@string/action_editar"
        android:orderInCategory="100"
    />
    <item android:id="@+id/action_actualizar_coordenadas"
        android:title="@string/action_actualizar_coordenadas"
        android:orderInCategory="101"
        />
    <item android:id="@+id/action_poste_eliminar"
        android:title="@string/action_eliminar"
        android:orderInCategory="101"
    />
    <item android:id="@+id/action_capturar_imagen"
        android:title="@string/action_capturar_imagen"
        android:orderInCategory="101"
    />
    <item android:id="@+id/action_abrir_imagen"
        android:title="@string/action_abrir_imagen"
        android:orderInCategory="101"
    />

</menu>