<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_poste"/>
                    <RadioGroup
                        android:layout_margin="1dp"
                        android:id="@+id/rg_tipo_poste"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/rb_poste_cemento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tipo_cemento"
                            android:checked="true"/>
                        <RadioButton
                            android:id="@+id/rb_poste_madera"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tipo_madera"/>
                        <RadioButton
                            android:id="@+id/rb_poste_alumnbrado_publico"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tipo_alumbrado"/>
                        <RadioButton
                            android:id="@+id/rb_poste_fachada"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tipo_fachada"/>
                        <RadioButton
                            android:id="@+id/rb_poste_menzula"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tipo_mensula" />
                        <RadioButton
                            android:id="@+id/rb_poste_otro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tipo_otro"/>
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tipo_preformada"/>
                        <RadioGroup
                            android:layout_margin="1dp"
                            android:id="@+id/rg_tipo_preformada"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:id="@+id/rb_poste_retencion"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tipo_preformada_retencion"
                                android:checked="true"
                                />
                            <RadioButton
                                android:id="@+id/rb_poste_suspension"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tipo_preformada_suspension"/>
                            <RadioButton
                                android:id="@+id/rb_poste_tensor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tipo_preformada_tensor"/>
                        </RadioGroup>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_adicionales"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:layout_margin="1dp"
                        android:id="@+id/cb_poste_ganancia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ganancia"/>

                    <CheckBox
                        android:layout_margin="1dp"
                        android:id="@+id/cb_poste_empalme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empalme"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:layout_margin="1dp"
                            android:id="@+id/cb_poste_mensula_prolongada"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mensula_prologada"
                            />
                        <CheckBox
                            android:layout_margin="1dp"
                            android:id="@+id/cb_poste_agregar_nuevo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/agregar_poste"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalles_adicionales"/>
            <EditText
                android:layout_margin="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_poste_descripcion"
                android:hint="@string/hint_dialog_agregar_poste"
                android:layout_weight="1"
                
                />


        </LinearLayout>
    </ScrollView>
</LinearLayout>