<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tecnoredsa.postaciones.MainActivity" >

    <!-- <item android:id="@+id/action_volver"
        android:title="@string/action_volver"
        android:icon="@drawable/abc_ic_ab_back_holo_dark"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_agregar"
        android:title="@string/action_abrir"
        android:icon="@drawable/abc_ic_commit_search_api_holo_dark"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        /> -->
    <item android:id="@+id/action_import_db"
        android:title="@string/action_import_db"
        android:icon="@drawable/ic_importar_db"
        android:orderInCategory="100"
        />
    <item android:id="@+id/action_exportar_db"
        android:title="@string/action_exportar_db"
        android:icon="@drawable/ic_importar_db"
        android:orderInCategory="100"
        />
    <item android:id="@+id/action_generar_html"
        android:title="@string/action_generar_html"
        android:orderInCategory="100"
    />
    <item android:id="@+id/action_generar_kml"
        android:title="@string/action_generar_kml"
        android:orderInCategory="100"
        />

    <item android:id="@+id/action_abrir_archivo"
        android:title="@string/action_abrir"
        android:icon="@drawable/abrir_google_earth"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_compartir"
        android:title="@string/action_compartir"
        android:icon="@drawable/abc_ic_menu_share_holo_dark"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:actionProviderClass=
            "android.widget.ShareActionProvider"
     />
    <!--
    <item android:id="@+id/action_compartir_kmz"
        android:title="@string/action_compartir_kmz"
        android:icon="@drawable/abc_ic_menu_share_holo_dark"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:actionProviderClass=
            "android.widget.ShareActionProvider"
        />
    -->
</menu>
