<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:orientation="horizontal"
    tools:context="com.fransis.postaciones.GpsFragment"
    android:background="@android:color/background_dark">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/gps_fragment_satelites_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satelites"
            android:textSize="15dp"
            android:textColor="@color/abc_search_url_text_normal" />
        <TextView
            android:id="@+id/gps_fragment_satelites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/abc_search_url_text_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/gps_fragment_latitud_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitud"
            android:textSize="15dp"
            android:textColor="@color/abc_search_url_text_normal" />
        <TextView
            android:id="@+id/gps_fragment_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/abc_search_url_text_normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/gps_fragment_longitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitud"
            android:textSize="15dp"
            android:textColor="@color/abc_search_url_text_normal" />
        <TextView
            android:id="@+id/gps_fragment_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/abc_search_url_text_normal" />

    </LinearLayout>

</LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"

        >

        <TextView
            android:id="@+id/gps_fragment_accuracy_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accuracy"
            android:textSize="15dp"
            android:textColor="@color/abc_search_url_text_normal" />
        <TextView
            android:id="@+id/gps_fragment_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/abc_search_url_text_normal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_satellite"
            android:src="@drawable/ic_satellite"
            android:layout_gravity="right"
             />
    </LinearLayout>


</LinearLayout>